update for mborne/cours-devops